# CMIRobot

./: README.md  pyproject.toml
nodebooks/: 1.collect_data.ipynb
src/cmirobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cmirobot/envs/: __init__.py  grid_world.py  so100.py
src/cmirobot/robots/: so100.py
src/cmirobot/teleoperators/: __init__.py  gamepad_teleop.py  teleop_keyboard.py
