[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmirobot"
version = "2.0.0"
description = "这是一次创新尝试"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.1.0",
    "gymnasium>=0.29.1",
    "pygame>=2.6.1",
    "pre-commit"
    ]